using ProcessBuilder instead of Runtime.exec